# pni_tomo_reconstruction

./: .gitignore  ReadMe.md  pixi.toml  pyproject.toml
configs/: boa_default.yaml
scripts/: check_astra.py  synthetic_reconstruction_test.py
src/boa_pni/: polarization.py  postprocess.py  reconstruct_astra.py
src/pni_reconstruction.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_polarization.py
